// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly 1`] = `
<div
  className="sc-cmTdod ePZXKJ StyledGrommet-sc-19lkkz7-0 bBubtL"
>
  <button
    className="sc-kEYyzF sc-cvbbAY ldJHua sc-iAyFgw ivKaOf StyledButton-sc-323bzc-0 djTlJn"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    Click me
  </button>
</div>
`;

exports[`Styled Anchor Button renders correctly 1`] = `
<div
  className="sc-cmTdod ePZXKJ StyledGrommet-sc-19lkkz7-0 bBubtL"
>
  <a
    className="sc-kEYyzF sc-cvbbAY dnQubt sc-iAyFgw ivKaOf StyledButton-sc-323bzc-0 djTlJn"
    href="#"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    Click me
  </a>
</div>
`;

exports[`Styled Button renders correctly 1`] = `
<div
  className="sc-cmTdod ePZXKJ StyledGrommet-sc-19lkkz7-0 bBubtL"
>
  <button
    className="sc-kEYyzF sc-cvbbAY dnQubt sc-iAyFgw ivKaOf StyledButton-sc-323bzc-0 djTlJn"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    Click me
  </button>
</div>
`;
